# cityseer-api

./: .eslintrc.js  .gitattributes  .gitignore  .markdownlint.json  .pdm-python  .pre-commit-config.yaml  .prettierrc.js  .prettierrc.json  .simple_docstring_parser.yaml  .stylelintrc.js  .travis.yml  .yap_config.yaml  Cargo.toml  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  TODO_F64_VERIFICATION.md  buildDocs.js  cliff.toml  coverage.lcov  generateDocs.js  jsconfig.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  setup.py  simple_docstring_parser.py  tailwind.config.js  test.gpkg  test.prof  vetur.config.js
.claude/: settings.json
.github/workflows/: build_qgis_plugin.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  generate_changelog.yml  publish_docs.yml  publish_package.yml  publish_package_dev.yml
analysis/: adaptive_sampling_results.md  dual-network-migration-plan.md  sampling_analysis.py  sampling_analysis_results.md  sync_sampling_constants.py  test_adaptive_sampling.py  test_substrates.py
analysis/od/: prototype_od_weighted.py
analysis/output/: README.md  sampling_model_constants.json
analysis/sampling/: adaptive_sampling.py  benchmark_regional.py  benchmark_timing.py  figure_headline.py  generate_tables.py  review_saturation_theory.py  sampling_reach.py  sampling_reach_results.md  supplementary_figures.py  utilities.py
analysis/utils/: __init__.py  plot.py  substrates.py
cityseer/: __init__.py  accessibility.py  cctypes.py  centrality.py  config.py  data.py  graphs.py  landuses.py  mixed_uses.py  networks.py  structures.py  temp.py  types.py  util.py
cityseer/algos/: __init__.py  centrality.py  centrality_test.go  checks.py  common.py  data.py  diversity.py  gopy.go  networks.py  structures.py  test.go  test.h  test.py  types.py
cityseer/algos_go/: test  test.py  tree.go
cityseer/gopy/: README.md  hello.go  test.py
cityseer/metrics/: __init__.py  centrality.py  landuses.py  layers.py  networks.py  observe.py  typing.py
cityseer/tools/: __init__.py  graphs.py  io.py  mock.py  osm.py  plot.py
cityseer/util/: graph_util.py  graphs.py  layers.py  mock.py  plot.py
demo_notebooks/: Pubs.csv  boston.py  example_scenario.py  getting_started.ipynb  london_centrality.ipynb  london_pubs.ipynb
demo_notebooks/boston/: boston_4326.dbf  boston_4326.shp  boston_4326.shx
demos/: connectivity_metrics.ipynb  getting_started.ipynb  london_centrality.ipynb  london_pubs.ipynb  momepy_to_cityseer.ipynb  osm_to_cityseer.ipynb  temp.ipynb
demos/centrality/: centrality_osm.ipynb
demos/connectivity/: open_roads_connectivity.ipynb  osm_connectivity.ipynb
demos/data/: LFS.md  df_north_london.feather
demos/general_util/: columns.py  matplotlib.rc  plot_funcs.py  theme_setup.py
demos/vae/: vae.ipynb  vae_selection.ipynb
docs/: .eslintrc.cjs  .eslintrc.js  .firebaserc  .gitignore  .prettierrc.cjs  .simple_docstring_parser.yaml  .stylelintrc.cjs  .stylelintrc.js  .yap_config.yaml  README.md  astro.config.mjs  attribution.md  doc_plots.py  eslint.config.js  firebase.json  generateDocs.js  generate_docs.py  genindex.html  gridsome.config.js  index.html  intro.md  jsconfig.json  license.md  objects.inv  overview.md  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  prettier.config.js  py-modindex.html  search.html  searchindex.js  simple_docstring_parser.py  tailwind.config.cjs  tailwind.config.js  tsconfig.json
docs/.doctrees/: environment.pickle
docs/.vitepress/: config.js
docs/.vuepress/: config.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/algos/: README.md
docs/content/: attribution.md  examples.md  guide.md  intro.md  landing.md
docs/doctrees/: environment.pickle  index.doctree
docs/guide/: cleaning.md
docs/html/: genindex.html  index.html  objects.inv  searchindex.js
docs/metrics/: layers.md  networks.md
docs/modules/: README.md  centrality.md
docs/pdoc/: pdoc_make.py
docs/pdoc_templates/: frame.html.jinja2  module.html.jinja2
docs/plots/: matplotlibrc  plots.py
docs/public/: manifest.webmanifest
docs/pydoc_markdown/: alt.py  buildDocs.js  custom_processor.py  custom_renderer.py  generateDocs.js  pydoc_builder.py  pydoc_markdown_builder.py
docs/source/: conf.py  index.rst
docs/src/: App.vue  main.js
docs/util/: README.md  graphs.md  mock.md  plot.md
docs/vitepress/: attribution.md  index.md  intro.md  plot.md
docs/vitepress_backup/: attribution.md  index.md  intro.md
docs_source/: Makefile
draft/: bb.py
experimental/: system.py  test_system.py
pysrc/cityseer/: __init__.py  config.py  network.py  rustalgos.pyi  sampling.py  structures.py
python/cityseer/: __init__.py
qgis_plugin/: README.md  build_plugin.py  profile_build.py  validate_coord_helpers.py
qgis_plugin/cityseer_qgis/: __init__.py  metadata.txt  provider.py
rust/: Cargo.toml
rust/src/: centrality.rs  common.rs  data.rs  diversity.rs  graph.rs  lib.rs  viewshed.rs
scratch/: tttest.py
src/: centrality.rs  common.rs  data.rs  data_structure.rs  diversity.rs  graph.rs  graph_structure.rs  lib.rs  viewshed.rs
tests/: conftest.py  generate_graph.py  graph_util.py  profile_clean.py  temp_test  test_centrality.py  test_data.py  test_doc_plots.py  test_graph_mutation.py  test_graphs.py  test_network.py  test_networks.py  test_performance.py  test_sampling.py  test_structures.py  test_temp.ipynb  test_temp.py  test_util.py  timing_comparisons.py
tests/algos/: test_centrality.py  test_checks.py  test_common.py  test_data.py  test_diversity.py  test_networks.py  test_types.py
tests/metrics/: test_centrality.py  test_landuses.py  test_layers.py  test_networks.py  test_visibility.py
tests/rustalgos/: test_centrality.py  test_common.py  test_data.py  test_diversity.py
tests/tools/: __init__.py  test_graphs.py  test_io.py  test_mock.py  test_network_cleaning.py  test_util.py
tests/util/: test_graphs.py  test_layers.py  test_mock.py
vitepress_backup/: attribution.md  intro.md
vitepress_backup/guide/: cleaning.md
(+622 files in other folders)
