[package]
name = "cityseer"
version = "0.1.0" # pyproject overrides this value
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "cityseer"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
atomic_float = "1.1.0"
ndarray = "0.16.1"
numpy = "0.24.0"
petgraph = "0.7.1"
pyo3 = { version = "0.24.0", features = ["multiple-pymethods"] }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
rstar = "0.12.2"
