[project]
name = "cityseer"
version = '4.22.4'
description = "Computational tools for network-based pedestrian-scale urban analysis"
readme = "README.md"
requires-python = ">=3.10, <3.14" # pending fiona support for 3.14
license = { text = "AGPL-3.0" }
keywords = [
  "network-topology",
  "numpy",
  "architecture",
  "openstreetmap",
  "urban-planning",
  "python3",
  "networkx",
  "networks",
  "spatial-analysis",
  "geographical-information-system",
  "spatial-data",
  "morphometrics",
  "network-analysis",
  "momepy",
  "spatial-data-analysis",
  "centrality",
  "shapely",
  "landuse",
  "osmnx",
  "network-centralities",
]
authors = [{ name = "Gareth Simons", email = "info@benchmarkurbanism.com" }]
maintainers = [{ name = "Gareth Simons", email = "info@benchmarkurbanism.com" }]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  # "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]
dependencies = [
  "matplotlib>=3.5.3", # colab 3.10.0
  "networkx>=3.0.0",   # colab 3.4.2
  "pyproj>=3.5.0",     # geopandas 3.5.0
  "requests>=2.27.1",  # colab 2.32.3
  "tqdm>=4.63.2",      # colab 4.67.1
  "shapely>=2.0.6",    # colab 2.0.7
  "numpy>=1.26.4",     # colab 1.26.4
  "geopandas>=1.0.1",  # colab 1.0.1
  "rasterio>=1.3.9",   # colab 1.4.3
  "fiona>=1.9.0",      # colab 1.10.1
  "osmnx>=2.0.1",      # colab 2.0.1
]

[project.urls]
homepage = "https://cityseer.benchmarkurbanism.com/"
documentation = "https://cityseer.benchmarkurbanism.com/"
repository = "https://github.com/benchmark-urbanism/cityseer-api"

# ruff pending script support
# https://github.com/astral-sh/uv/issues/5903#issuecomment-2360856896
[tool.poe.tasks]
generate_docs = "python docs/generate_docs.py"
docs_dev = { shell = "uv run poe generate_docs && npm run dev --prefix docs" }
docs_build = { shell = "uv run poe generate_docs && npm run build --prefix docs" }
docs_preview = { shell = "uv run poe generate_docs && npm run preview --prefix docs" }
verify_project = { shell = "ruff format && ruff check && ty check && python analysis/sync_sampling_constants.py && pytest ./tests" }
# Run full sampling analysis (slow) - regenerates JSON with new fitted values
run_sampling_analysis = "python analysis/sampling_analysis.py"
# Sync sampling model constants from analysis output to config.py
sync_sampling_constants = "python analysis/sync_sampling_constants.py"

[dependency-groups]
dev = [
  "pytest>=7.2.0",
  "momepy>=0.5.4",
  "pandas-stubs>=1.5.2.221213",
  "types-requests>=2.28.11.7",
  "jupyterlab>=3.5.2",
  "jupyter>=1.0.0",
  "maturin>=1.10.1",
  "pip>=23.2",
  "pdoc>=14.1.0",
  "dominate>=2.8.0",
  "ruff>=0.5.1",
  "poethepoet>=0.29.0",
  "types-networkx>=3.4.2.20250319",
  "docstring-parser>=0.16",
  "utm>=0.8.1",
  "overturemaps>=0.18.0",
  "ty>=0.0.5",
  "libpysal>=4.13.0",
  "colorcet>=3.1.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "pysrc"
module-name = 'cityseer.rustalgos'
features = ["pyo3/extension-module"]

[tool.setuptools]
packages = ["cityseer"]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["draft/**", "temp/**", "scratch/**"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ty.src]
include = ["pysrc"]

[tool.ty.rules]

[tool.pytest.ini_options]
console_output_style = "count"
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
addopts = "--ignore=tests/test_performance.py"
